...
      SignIn: Routes.signIn,
      PatientTabs: {
        screens: {
          Today: Routes.today,
          MedicationsStack: {
            screens: {
              Medications: Routes.medications,
              MedicationDetail: `${Routes.medications}/:medicationId`,
            },
          },
          Appointments: Routes.appointments,
          SettingsStack: {
            screens: {
...
            },
          },
        },
      },
      CaregiverTabs: {
        screens: {
          Dashboard: Routes.dashboard,
          ManageStack: {
            screens: {
              Manage: Routes.manage,
              MedicationDetail: `${Routes.manage}/medications/:medicationId`,
            },
          },
...
